--- a/style.css
+++ b/style.css
@@ -66,3 +66,27 @@ body {
   background: #333;
   color: #fff;
 }
+
+/* Хуудасны анимаци */
+#page-1 h1 {
+  transform: translateY(-900px);
+  animation: heading var(--animate-speed) forwards ease-in;
+}
+
+#page-1 p {
+  transform: translateX(-1800px);
+  animation: page-text var(--animate-speed) forwards ease-in;
+}
+
+/* Keyframes */
+@keyframes heading {
+  to {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes page-text {
+  to {
+    transform: translateX(0px);
+  }
+}
